--- a/.env
+++ b/.env
@@ -12,6 +12,6 @@ REACT_APP_API_SECRET=srvacc_5qsp988etr3giht8h9kuew9ju
 
 
 
-NEXT_PUBLIC_REDIRECT_URL=http://localhost:3000/theta-pass-auth-finished.html
+NEXT_PUBLIC_REDIRECT_URL=https://theta-build.vercel.app/theta-pass-auth-finished.html
 NEXT_PUBLIC_THETA_ZILLA_MARKETPLACE_URL=https://thetazilla.thetadrop.com/content/type_2s2kcznsu3e06en43r3kg50b90c
 NEXT_PUBLIC_THETA_ZILLA_CONTRACT_ADDRESS=0x6e7e0c8a1109fdc68e5bca42d54740f333b3545d
